# pips-solver

./: .gitignore  README.md  pyproject.toml  render.yaml
.github/workflows/: deploy-pages.yml
frontend/: app.js  config.js  index.html  styles.css
game-samples/: pips-board-0.json  pips-board-1.json  pips-board-2.json  pips-board-3.json  pips-board-4.json  pips-board-5.json
game-samples/results/: pips-board-0.solution.json  pips-board-1.solution.json  pips-board-2.solution.json  pips-board-3.solution.json  pips-board-4.solution.json
src/pips_solver/: __init__.py  cli.py  pips_solver.py  sample_runner.py  server.py  solver.py
